# pki_projekt

./: Cargo.toml  README.md
migrations/: 20240527153432_init.sql
src/: db.rs  main.rs  markup.rs  script.js  ws.rs
