[package]
name = "pki_projekt"
version = "0.1.0"
authors = ["Jakub Grodzki 240675"]
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-htmx = "0.6.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
maud = { version = "0.26.0", features = ["axum"] }
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "time"] }
time = { version = "0.3.36", features = ["parsing"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
